[bugfix] tweak display name alignment

--- a/app/javascript/flavours/glitch/styles/gts/status/status-display-name.scss
+++ b/app/javascript/flavours/glitch/styles/gts/status/status-display-name.scss
@@ -15,7 +15,7 @@
     .display-name__html,
     .display-name__account {
         display: block;
-        line-height: max(22px, 1.4em);
+        line-height: max(21px, 1.4em);
     }
 
     .display-name__html {
